...
                            padding:
                                const EdgeInsets.only(bottom: kDefaultPadding),
                            child: SizedBox(
                              height: 40.0,
                              width: double.infinity,
                              child: ElevatedButton(
                                key: const Key('loginSubmitButton'),
                                style: themeData
                                    .extension<AppButtonTheme>()!
                                    .primaryElevated,
                                onPressed: _isFormLoading ? null : _submitForm,
                                child: Text(lang.login),
                              ),
                            ),
                          ),
                          SizedBox(
                            width: double.infinity,
                            child: TextButton(
                              key: const Key('loginRegisterNowButton'),
                              style: themeData
                                  .extension<AppButtonTheme>()!
                                  .secondaryText,
                              onPressed: () =>
                                  GoRouter.of(context).go(RouteUri.register),
                              child: RichText(
...
