...
    // final appDataTableTheme = Theme.of(context).extension<AppDataTableTheme>()!;
    final size = MediaQuery.of(context).size;

    final summaryCardCrossAxisCount = (size.width >= kScreenWidthLg ? 4 : 2);

    return PortalMasterLayout(
      key: const Key('dashboardScreen'),
      body: ListView(
        padding: const EdgeInsets.all(kDefaultPadding),
        children: [
          const SizedBox(height: 8),
          /* ListTile(
            leading: const Icon(Icons.search),
...
                return Wrap(
                  direction: Axis.horizontal,
                  spacing: kDefaultPadding,
                  runSpacing: kDefaultPadding,
                  children: [
                    _HoverableTile(
                      key: const Key('dashboardFirmTile'),
                      onTap: () => GoRouter.of(context).go(RouteUri.firmDetail),
                      child: SummaryCard(
                        title: lang.pendingIssues(2),
                        value: lang.dashboardCardMyFirmValue,
                        icon: Icons.business,
                        backgroundColor: Colors.lightBlue,
...
