...
  Widget build(BuildContext context) {
    final lang = Lang.of(context);
    final dateFormat = DateFormat.yMMMd(Localizations.localeOf(context).toString())
        .add_Hm();

    return Column(
      key: const Key('firmOverviewBody'),
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        _InfoRow(
          icon: Icons.business,
          label: lang.firmNameLabel,
          value: firm.name,
...
